# river-segment

./: .gitignore  README.md  finetune.py  infer-all.py  infer-centerline.py  infer-shape.py  infer-width.py  main.py  pyproject.toml
conf/: config.yaml  finetune.yaml  infer.yaml  paths.yaml  train.yaml
src/: __init__.py
src/config/: __init__.py  loader.py
src/data/: __init__.py  controller.py  io.py  loader.py
src/domain/: __init__.py  inference.py  training.py
src/models/: __init__.py  base.py  factory.py  loader.py  out_fns.py  satlas.py
src/services/: __init__.py  centerline.py  shape.py  width.py
