[project]
name = "river-segment"
version = "0.1.0"
description = "River width inference from satellite imagery"
readme = "README.md"
requires-python = ">=3.9,<3.12"

dependencies = [
    "gdown>=5.2.1",
    "geopandas>=1.0.1",
    "h5py>=3.10.0",
    "hydra-core>=1.3.0",
    "loguru>=0.7.3",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.10.0",
    "pandas>=2.2.0",
    "pillow>=11.0.0",
    "progress>=1.6",
    "rasterio>=1.4.0",
    "requests>=2.32.0",
    "ruff>=0.8.0",
    "satlaspretrain-models>=0.3.0",
    "scikit-image>=0.24.0",
    "scipy>=1.13.0",
    "segmentation-models-pytorch",
    "shapely>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.67.0",
    "utm>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
sources = { "segmentation-models-pytorch" = { git = "https://github.com/qubvel/segmentation_models.pytorch", rev = "v0.5.0" } }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"